Shrink KARATE2-HANDOFF to decisions on record; move fixture-import traps into the skill
The handoff was a "state of the branch" doc for whoever picked up mid-Karate-2-work. The
branch has landed - 3.0.0 shipped, phase-3 debug is not planned - so most of it is dead
weight now: pipeline narrative duplicates docs/KARATE2.md, "bugs surfaced" duplicates the
git log, "not done" is all done, and the "gotchas already paid for" split between IDE
Starter/Driver traps (skill's job) and Karate 2 specifics (KARATE2.md's job).

Kept: the small set of decisions that don't obviously live anywhere else - bundled Karate 1
fallback stays v1-only, "early access" wording, application-level version override,
Karate 2 feature-file debugging is not planned. Plus one cosmetic-known-issue and a set of
pointers to the authoritative sources (site/status.md, KARATE2.md, the two skills, git).
170 lines -> 46.

Moved: the four fixture-import failure modes into the ide-integration-tests skill's new
"Fixture import" section (mode 3 was already there in an abbreviated form; modes 1, 2, 4
were only in the handoff). The skill's cross-reference to the handoff is updated to point
at its own section instead.

Reference updates: docs/KARATE2.md dropped the "HANDOFF has the working state and traps"
line; manual-test-checklist.md points fixture-import fixes at the skill rather than the
handoff.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>